--- a/docs/thebook/Installation/menus.tex
+++ b/docs/thebook/Installation/menus.tex
@@ -2,7 +2,7 @@
 \subsection{Online}
 
 Figure~\ref{online gui}  is the main window in the online version.
-
+Note however that, at this point, the online version is highly experimental.
 \begin{enumerate}
 \item The Green window  : This is the window that keeps the text that has already been processed.
 \item The Yellow window ': This is the only window you can type your commands into.
