--- a/docs/thebook/prooftech/proof1.tex
+++ b/docs/thebook/prooftech/proof1.tex
@@ -588,7 +588,7 @@ Small variations can make this false.
  
  
  
- This is one of the most common "formal" fallacy. It is called "Affirming the consequence". Recall that if $P$ is false then $P\rightarrow Q$ is automatically true if $P$ is false and so the deduction above does not hold. It is, however, remarkably prevalent in public discourse especially in adverx
+ This is one of the most common "formal" fallacy. It is called "Affirming the consequence". Recall that if $P$ is false then $P\rightarrow Q$ is automatically true if $P$ is false and so the deduction above does not hold. It is, however, remarkably prevalent in public discourse especially in advertising
 
 \subsection{A puzzle}
 
